--- a/apbdesa.html
+++ b/apbdesa.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -220,22 +221,96 @@
               <h3 class="ttext-dark display-5 mb-5 mt-5">
                 <strong>APBDesa</strong>
               </h3>
-              <div class="row">
-                <div class="col-md-12 col-sm-12">
-                  <div class="alert alert-info">
-                    <p>
-                      <i class="fas fa-exclamation-triangle"></i>
-                      Saat ini kami tidak memiliki data "APBDesa" untuk
-                      ditampilkan.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <script type="text/javascript">
-                $(document).ready(function () {});
-              </script>
+              <table id="apbdesa" class="table table-bordered table-striped">
+                <tr>
+                  <th class="text-center" style="width: 15%">Kode Rek</th>
+                  <th class="text-center" style="width: 40%">Uraian</th>
+                  <th class="text-center" style="width: 20%">
+                    Anggaran<br />
+                    (RP)
+                  </th>
+                  <th class="text-center" style="width: 40%">keterangan</th>
+                </tr>
+                <tr class="text-center">
+                  <td>1</td>
+                  <td>2</td>
+                  <td>3</td>
+                  <td>4</td>
+                </tr>
+                <tr style="font-weight: 700">
+                  <td>4.</td>
+                  <td>Pendapatan</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>4.2</td>
+                  <td>Pendapatan transfer</td>
+                  <td style="text-align: right">2.087.928.183.00</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>4.3</td>
+                  <td>Pendapatan Lain-lain</td>
+                  <td style="text-align: right">0.00</td>
+                  <td></td>
+                </tr>
+                <tr class="text-center" style="font-weight: 700">
+                  <td></td>
+                  <td>Jumlah Pendapatan</td>
+                  <td style="text-align: right">2.087.928.183.00</td>
+                  <td></td>
+                </tr>
+                <tr style="font-weight: 700">
+                  <td>5.</td>
+                  <td>Belanja</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>5.1</td>
+                  <td>Belanja Pegawai</td>
+                  <td style="text-align: right">535.781.184.00</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>5.2</td>
+                  <td>Belanja Barang dan Jasa</td>
+                  <td style="text-align: right">968.028.399.00</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>5.3</td>
+                  <td>Belanja Modal</td>
+                  <td style="text-align: right">465.318.600.00</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>5.4</td>
+                  <td>Belanja Tidak Terduga</td>
+                  <td style="text-align: right">118.800.000.00</td>
+                  <td></td>
+                </tr>
+                <tr class="text-center" style="font-weight: 700">
+                  <td></td>
+                  <td>Jumlah Belanja</td>
+                  <td style="text-align: right">2.087.928.183.00</td>
+                  <td></td>
+                </tr>
+                <tr class="text-center" style="font-weight: 700">
+                  <td></td>
+                  <td>Surplus / (Defisit)</td>
+                  <td style="text-align: right">0.00</td>
+                  <td></td>
+                </tr>
+                <tr class="text-center" style="font-weight: 700">
+                  <td></td>
+                  <td>Sisa Lebih Pembiayaan Anggaran</td>
+                  <td style="text-align: right">0.00</td>
+                  <td></td>
+                </tr>
+              </table>
             </div>
-            <div class="col-md-3 col-md-offset-1"></div>
           </div>
         </div>
       </div>
