--- a/perangkat.html
+++ b/perangkat.html
@@ -243,7 +243,7 @@
                 data-bs-target="#exampleModal15"
               >
                 <img
-                  src=""
+                  src="img/kades.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -273,7 +273,7 @@
                 data-bs-target="#exampleModal16"
               >
                 <img
-                  src=""
+                  src="img/sekret.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -303,7 +303,7 @@
                 data-bs-target="#exampleModal17"
               >
                 <img
-                  src=""
+                  src="img/kpl-pem.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -333,7 +333,7 @@
                 data-bs-target="#exampleModal18"
               >
                 <img
-                  src=""
+                  src="img/kpl-kese.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -363,7 +363,7 @@
                 data-bs-target="#exampleModal19"
               >
                 <img
-                  src="Warsito"
+                  src="img/kpl-pel.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -393,7 +393,7 @@
                 data-bs-target="#exampleModal20"
               >
                 <img
-                  src=""
+                  src="img/kpl-umum.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -423,7 +423,7 @@
                 data-bs-target="#exampleModal21"
               >
                 <img
-                  src=""
+                  src="img/kpl-keu.jpg"
                   class="img-fluid pt-2"
                   style="
                     height: 260px;
@@ -453,7 +453,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -465,7 +468,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Dedi Rachmat</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kades.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Desa Bumi Sejahtera</h4>
           </div>
         </div>
@@ -483,7 +491,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -495,7 +506,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Abdul Sani</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/sekret.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Sekretaris Desa</h4>
           </div>
         </div>
@@ -513,7 +529,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -525,7 +544,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Setyowati</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-pem.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Seksi Pemerintahan</h4>
           </div>
         </div>
@@ -543,7 +567,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -555,7 +582,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">I kadek Giri Putra</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-kese.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Seksi Kesejahteraan</h4>
           </div>
         </div>
@@ -573,7 +605,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -585,7 +620,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Warsito</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-pel.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Seksi Pelayanan</h4>
           </div>
         </div>
@@ -603,7 +643,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -615,7 +658,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Nurhayati</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-umum.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Urusan Umum</h4>
           </div>
         </div>
@@ -633,7 +681,10 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black !important; color: #dadada"
+            style="
+              background-color: rgb(45, 130, 163) !important;
+              color: #dadada;
+            "
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -645,7 +696,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">I Dewa Nyoman Mantra</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-keu.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <h4 class="py-2">Kepala Urusan Keuangan</h4>
           </div>
         </div>
