--- a/produk.html
+++ b/produk.html
@@ -209,30 +209,22 @@
       </div>
     </section>
 
-    <section id="pengumuman" class="pengumuan-desa mb-100">
-      <div class="main mb-xlg">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8">
-              <h3 class="text-dark display-5 mb-5 mt-5">
-                <strong>Produk Hukum</strong>
-              </h3>
-              <div class="row">
-                <div class="col-md-12 col-sm-12">
-                  <div class="alert alert-info">
-                    <p>
-                      <i class="fas fa-exclamation-triangle"></i>
-                      Saat ini kami tidak memiliki data "Produk Hukum" untuk
-                      ditampilkan.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <script type="text/javascript">
-                $(document).ready(function () {});
-              </script>
+    <section class="mx-auto">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-9 mx-auto">
+            <div class="row content-artikel p-4">
+              <h1 class="judul-berita text-center" style="font-weight: 700">
+                Produk Hukum
+              </h1>
+
+              <p class="isi-artikel"></p>
+
+              <ol>
+                <li>Hukum adat bali : Perarem ( Awig-Awig)</li>
+                <li>Peraturan Desa</li>
+              </ol>
             </div>
-            <div class="col-md-3 col-md-offset-1"></div>
           </div>
         </div>
       </div>
