--- a/sejarah.html
+++ b/sejarah.html
@@ -221,23 +221,97 @@
               <h1 class="judul-sejarah text-center" style="font-weight: 700">
                 Sejarah Desa
               </h1>
-              <img
-                src="img/aa.jpeg"
-                class="img-fluid"
-                style="border-radius: 3%"
-              />
-              <p class="isi-sejarah" alig="justify"></p>
+
+              <p class="isi-sejarah"></p>
 
               <p>
-                Desa bumi sejahtera merupakan desa transmigrasi penempatan pada
-                tahun 1989. Desa Bumi Sejahtera merupakan penempatan pertama di
-                Kecamatan Kaliorang sebagai satuan pemukiman transmigrasi.
-                Terdapat 101 Kartu Keluarga (KK) dari jawa tengah dan jawa barat
-                kemudian di susul dari trans lokal. Desa bumi sejahtera
-                devinitiv pada tahun 2007.
+                Desa Bumi Sejahtera berada di Kecamatan Kaliorang Kabupaten
+                Kutai Timur dibentuk berdasarkan Perda Kabupaten Kutai Timur
+                nomor Tahun 2000, merupakan hasil pemekaran Kecamatan Induk
+                Sangkulirang Kabupaten Kutai Timur yang diresmikan oleh Gubernur
+                Kalimantan Timur tanggal 19 Agustus 2000, kemudian dengan
+                perkembangannya dalam waktu 5 (lima) tahun Kecamatan Kaliorang
+                dibagi 2(dua) Kecamatan, yaitu Kecamatan Kaliorang dan Kecamatan
+                Kaubun yang tertuang dalam Perda Kabupaten Kutai Timur no 12
+                tahun 2005 tanggal 31 oktober 2005. Semula Desa Bumi Sejahtera
+                pada awalnya memiliki Penduduk Transmigrasi pertama yaitu : Desa
+                Bumi Sejahtera (EX UPT) jumlah laki-laki 555, perempuan 490 dan
+                jumlah Kepala Keluarga 272 jiwa. Desa Bumi Sejahtera mengalami
+                pergantian Kepala Unit Pemukiman transmigrasi 3 (tiga) kali
+                pergantian, serta dipimpin oleh Kepala Desa Persiapan sebanyak 2
+                (dua) kali, Kepala Desa sebanyak 4 (Empat) kali dan juga 2 (dua)
+                kali di pimpin oleh Penjabat Kepala Desa. Adapun urutannya
+                sebagai berikut :
               </p>
 
               <p>&nbsp;</p>
+              <table id="kepala-desa">
+                <tr>
+                  <th>Nama</th>
+                  <th>Jabatan</th>
+                  <th>Periode</th>
+                </tr>
+                <tr>
+                  <td>Yusran</td>
+                  <td>Kepala Unit Pemukiman Transmigrasi(Ka UPT)</td>
+                  <td>1987-1989</td>
+                </tr>
+                <tr>
+                  <td>Mashuri</td>
+                  <td>Kepala Unit Pemukiman Transmigrasi(Ka UPT)</td>
+                  <td>1989-1990</td>
+                </tr>
+                <tr>
+                  <td>Amat Sutarjah</td>
+                  <td>Kepala Unit Pemukiman Transmigrasi(Ka UPT)</td>
+                  <td>1990-1993</td>
+                </tr>
+                <tr>
+                  <td>Suhendar Darmawan</td>
+                  <td>Kepala Desa Persiapan</td>
+                  <td>1993-1995</td>
+                </tr>
+                <tr>
+                  <td>I wayan Sepir Susanta</td>
+                  <td>Kepala Desa Persiapan</td>
+                  <td>1995-1999</td>
+                </tr>
+                <tr>
+                  <td>Ismail Algam</td>
+                  <td>Kepala Desa</td>
+                  <td>1999-2002</td>
+                </tr>
+                <tr>
+                  <td>Mustiya</td>
+                  <td>PJS. Kepala Desa</td>
+                  <td>2002-2003</td>
+                </tr>
+                <tr>
+                  <td>Mustiya</td>
+                  <td>Kepala Desa</td>
+                  <td>2003-2008</td>
+                </tr>
+                <tr>
+                  <td>Suratin</td>
+                  <td>Kepala Desa</td>
+                  <td>2008-2014</td>
+                </tr>
+                <tr>
+                  <td>Sriyanta, SE, M.Si</td>
+                  <td>PJ. Kepala Desa</td>
+                  <td>2014-2015</td>
+                </tr>
+                <tr>
+                  <td>Agus Salim A.Md</td>
+                  <td>PJ. Kepala Desa</td>
+                  <td>2015-2017</td>
+                </tr>
+                <tr>
+                  <td>Dedi Rachmat</td>
+                  <td>Kepala Desa</td>
+                  <td>2017-Sekarang</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
