--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kades.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -472,7 +472,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/sekret.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -496,7 +496,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kpl-pem.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -519,7 +519,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kpl-kese.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -542,7 +542,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kpl-pel.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -565,7 +565,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kpl-umum.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -588,7 +588,7 @@
                     style="text-decoration: none; border: none; cursor: pointer"
                   >
                     <img
-                      src=""
+                      src="img/kpl-keu.jpg"
                       class="img-fluid mx-auto"
                       style="
                         height: 240px;
@@ -619,7 +619,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -631,7 +631,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Dedi Rachmat</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kades.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Kepala Desa Bumi Sejahtera</p>
           </div>
         </div>
@@ -649,7 +654,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -662,7 +667,12 @@
           z
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Abdul Sani</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/sekret.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Sekretaris Desa</p>
           </div>
         </div>
@@ -680,7 +690,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -692,7 +702,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Setyowati</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-pem.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Kepala Seksi Pemerintahan</p>
           </div>
         </div>
@@ -710,7 +725,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -722,7 +737,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">I Kadek Giri Putra</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-kese.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">kepala Seksi Kesejahteraan</p>
           </div>
         </div>
@@ -740,7 +760,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -752,7 +772,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Warsito</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-pel.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Kepala Seksi Pelayanan</p>
           </div>
         </div>
@@ -770,7 +795,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -782,7 +807,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">Nurhayati</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-umum.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Kepala Urusan Umum</p>
           </div>
         </div>
@@ -800,7 +830,7 @@
         <div class="modal-content">
           <div
             class="modal-header"
-            style="background-color: black; color: white"
+            style="background-color: rgb(45, 130, 163); color: white"
           >
             <h5 class="modal-title" id="exampleModalLabel">Perangkat Desa</h5>
             <button
@@ -812,7 +842,12 @@
           </div>
           <div class="modal-body text-center">
             <h3 class="py-2" style="font-weight: bold">I Dewa Nyoman Mantra</h3>
-            <img class="m-auto" src="" class="img-fluid" style="width: 300px" />
+            <img
+              class="m-auto"
+              src="img/kpl-keu.jpg"
+              class="img-fluid"
+              style="width: 300px"
+            />
             <p class="py-2">Kepala Urusan Keuangan</p>
           </div>
         </div>
