--- a/rt.html
+++ b/rt.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
-
     <link rel="stylesheet" href="owl.theme.default.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
+    <link rel="stylesheet" href="boot.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -54,7 +54,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a
-                class="nav-link active dropdown-toggle"
+                class="nav-link dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -82,7 +82,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link active dropdown-toggle"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -177,7 +177,6 @@
         </div>
       </div>
     </nav>
-
     <section>
       <div
         class="banner-halaman"
@@ -192,7 +191,7 @@
             class="text-bannner"
             style="position: absolute; display: block; top: 20%; color: black"
           >
-            <h1 style="font-weight: bold">Profil</h1>
+            <h1 style="font-weight: bold">Pemerintahan</h1>
             <nav>
               <ol class="breadcrumb">
                 <li class="breadcrumb-item">
@@ -205,91 +204,157 @@
                 </li>
                 <li class="breadcrumb-item" aria-current="page">
                   <a href="" class="text-decoration-none" style="color: black"
-                    >Profil</a
+                    >Pemerintahan</a
                   >
                 </li>
-                <li class="breadcrumb-item active" style="color: black">
-                  Wilayah Desa
+                <li class="breadcrumb-item" aria-current="page">
+                  <a
+                    href="lembaga.html"
+                    class="text-decoration-none"
+                    style="color: black"
+                    >Lembaga Desa</a
+                  >
                 </li>
+
+                <li class="breadcrumb-item active" style="color: black">RT</li>
               </ol>
             </nav>
           </div>
         </div>
       </div>
     </section>
+    <section id="bpd">
+      <div class="main mb-xlg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-primary text-primary">
+                <strong>RUKUN TETANGGA</strong>
+              </h3>
+              <div class="row">
+                <div class="col-sm-2 col-sm-3">
+                  <img
+                    src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.58.jpeg"
+                    class="img-responsive"
+                  />
+                </div>
+                <div class="col-md-10 col-sm-9">
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <th width="20%" nowrap class="b-none">Nama Lembaga</th>
+                        <td width="1px" class="b-none">:</td>
+                        <td class="b-none">RUKUN TETANGGA</td>
+                      </tr>
+                      <tr>
+                        <th>Singkatan</th>
+                        <td>:</td>
+                        <td>RT</td>
+                      </tr>
+                      <tr>
+                        <th>Dasar Hukum / SK Pembentukan</th>
+                        <td>:</td>
+                        <td></td>
+                      </tr>
+                      <tr>
+                        <th nowrap class="b-bottom">Alamat Kantor</th>
+                        <td class="b-bottom">:</td>
+                        <td class="b-bottom">JL.</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
 
-    <section class="mx-auto">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-9 mx-auto">
-            <div class="row content-artikel p-4">
-              <h1 class="judul-berita text-center" style="font-weight: 700">
-                WILAYAH DESA
-              </h1>
-              <img
-                src="img/foto2.jpg"
-                class="img-fluid"
-                style="border-radius: 3%"
-              />
-              <p class="isi-artikel"></p>
-              <p><strong>Letak Geografis&nbsp;&nbsp;&nbsp; </strong></p>
+              <div class="panel panel-primary">
+                <div class="panel-heading">Kepengurusan RT</div>
+                <div class="panel-body">
+                  <p></p>
 
-              <p>
-                Secara geografis Desa Bumi Sejahtera merupakan wilayah bagian
-                dari Kecamatan Kaliorang . Kabupaten Kutai Timur dan merupakan
-                daerah dataran rendah dengan batas-batas wilayah sebagai berikut
-                :
-              </p>
-
-              <ul>
-                <li>
-                  Sebelah Utara : Desa Benua Baru ILIR, Kecamatan Sangkulirang
-                </li>
-                <li>Sebelah Selatan : Desa Kaliorang, Kalorang</li>
-                <li>
-                  Sebelah Barat : Desa Citra Manunggal Jaya, Kecamatan Kalioran
-                </li>
-                <li>Sebelah Timur : Desa Maloy, Kecamatan Sangkulirang</li>
-              </ul>
-
-              <p>&nbsp;</p>
-
-              <p><strong>Topografi</strong></p>
-
-              <p>
-                Secara umum keadaan topografi Desa Bumi Sejahtera adalah dataran
-                rendah, merupakan daerah pertanian, perkebunan sehingga sangat
-                cocok untuk pengembangandanpembukaan lahan persawahan,
-                Hortikultura, perkebunan., Desa Bumi Sejahtera merupakan
-                penghasil Padi, Hortikultura dan Komoditi Perkebunan yang sangat
-                potensial, karena hampir penduduknya mempunyai persawahan,
-                Hortikultura dan Perkebunan yang cukup luas.
-              </p>
-
-              <p><strong>Iklim</strong></p>
-
-              <p>
-                Desa Bumi Sejahtera mempunyai iklim tropis ( dua musim ) yaitu
-                Hujan dan Panas, dimana musim penghujan dimulai pada bulan
-                Nopember s/d April dan musim panas ( kemarau ) dimulai pada
-                bulan Juli s/d September.
-              </p>
-
-              <p><strong>Orbitasi </strong></p>
-
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Laudantium velit nisi fuga pariatur, quas dolores veniam
-                deserunt minima molestiae dolorem quis delectus, alias non
-                inventore exercitationem laboriosam similique? Earum,
-                blanditiis!
-              </p>
+                  <table
+                    id="bpd-table"
+                    class="table table-bordered table-striped"
+                  >
+                    <thead></thead>
+                    <tr>
+                      <th style="width: 5%">No</th>
+                      <th>Nama</th>
+                      <th>Jabatan</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>Jumanqin</td>
+                      <td>Ketua RT 01</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Sahidin</td>
+                      <td>Ketua RT 02</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>Ilham</td>
+                      <td>Ketua RT 03</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Agus Mulyana</td>
+                      <td>Ketua RT 04</td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>Alimuddin</td>
+                      <td>Ketua RT 05</td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>Bambang Budi S</td>
+                      <td>Ketua RT 06</td>
+                    </tr>
+                    <tr>
+                      <td>7</td>
+                      <td>Andri Suripto</td>
+                      <td>Ketua RT 07</td>
+                    </tr>
+                    <tr>
+                      <td>8</td>
+                      <td>Syahdan</td>
+                      <td>Ketua RT 08</td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>Damiri</td>
+                      <td>Ketua RT 09</td>
+                    </tr>
+                    <tr>
+                      <td>10</td>
+                      <td>I Kadek Suparma</td>
+                      <td>Ketua RT 10</td>
+                    </tr>
+                    <tr>
+                      <td>11</td>
+                      <td>I Wayan Darma</td>
+                      <td>Ketua RT 11</td>
+                    </tr>
+                    <tr>
+                      <td>12</td>
+                      <td>I Kmq. Budiartana</td>
+                      <td>Ketua RT 12</td>
+                    </tr>
+                    <tr>
+                      <td>13</td>
+                      <td>I Gusti Made Warsana</td>
+                      <td>Ketua RT 13</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
             </div>
+            <div class="col-md-3"></div>
           </div>
         </div>
       </div>
     </section>
-
     <footer class="footer-akhir p-3">
       <div class="container">
         <div class="row p-5">
