--- a/detail-kepala.html
+++ b/detail-kepala.html
@@ -182,7 +182,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
@@ -209,7 +209,7 @@
                   >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Stuktur Organisasi
+                  Kepala Desa
                 </li>
               </ol>
             </nav>
