--- a/detail-sek-pel.html
+++ b/detail-sek-pel.html
@@ -183,7 +183,7 @@
       <div
         class="banner-halaman"
         style="
-          background-image: url(img/wave.svg);
+          background-image: url(img/q.svg);
           height: 47vh;
           background-size: cover;
         "
@@ -210,7 +210,7 @@
                   >
                 </li>
                 <li class="breadcrumb-item active" style="color: black">
-                  Stuktur Organisasi
+                  Kep Seksi Pelayanan
                 </li>
               </ol>
             </nav>
