--- a/index.html
+++ b/index.html
@@ -291,9 +291,13 @@
           </div>
           <div class="main-bar-menu col-md col-sm-6 col-6 text-center py-3">
             <a
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal"
-              style="text-decoration: none; border: none; cursor: pointer"
+              href="pengumuman.html"
+              style="
+                text-decoration: none;
+                border: none;
+                cursor: pointer;
+                color: black;
+              "
             >
               <div class="row border-end">
                 <i class="fa fa-bullhorn" style="font-size: 100px"></i>
