--- a/pengumuman.html
+++ b/pengumuman.html
@@ -224,9 +224,42 @@
                 <div class="col-md-12 col-sm-12">
                   <div class="alert alert-info">
                     <p>
-                      <i class="fas fa-exclamation-triangle"></i>
-                      Saat ini kami tidak memiliki data "Pengumuman" untuk
-                      ditampilkan.
+                      Diberitahukan kepada seluruh warga masyarakat desa bumi
+                      sejahtera bahwa pelayanan Administrasi Kependudukan sudah
+                      bisa dilakukannya di Kantor Desa Bumi sejahtera Berikut
+                      kami sampaikan jenis pelayanan:
+                    </p>
+
+                    <ol>
+                      <li>Akta kelahira</li>
+                      <li>Akta kematian</li>
+                      <li>Perubahan biodata</li>
+                      <li>Pindah luar daerah</li>
+                      <li>
+                        Perubahan alamat/pindah antar kecamatan, kelurahan atau
+                        RT
+                      </li>
+                      <li>Batal pindah luar daerah</li>
+                      <li>Penduduk pendatang luar daerah</li>
+                      <li>Numpang kartu keluarga</li>
+                      <li>Gabung kartu keluarga karena perkawinan</li>
+                      <li>Pecah kartu keluarga</li>
+                      <li>Pisah kartu keluarga karena perceraian</li>
+                      <li>Cetak ulang kartu keluarga</li>
+                      <li>Kehilangan/kerusakan dokumen akta kelahiran</li>
+                      <li>Kehilangan/kerusakan akta perkawinan & perceraian</li>
+                      <li>
+                        Kehilangan/kerusakan akta kematian/pengesahan
+                        anak/pengakuan anak
+                      </li>
+                      <li>
+                        Update data Kependudukan (bpjs, perbankan, instansi
+                        Pemerintahan,dll)
+                      </li>
+                    </ol>
+                    <p style="font-weight: 700">
+                      Nomor kontak/WA pelayanan: 085754462483 <br />Demikian
+                      atas perhatiannya, terimakasih 🙏
                     </p>
                   </div>
                 </div>
