--- a/rt.html
+++ b/rt.html
@@ -233,10 +233,7 @@
               </h3>
               <div class="row">
                 <div class="col-sm-2 col-sm-3">
-                  <img
-                    src="http://bukitmakmur-kotim.desa.id/assets/files/data/website-desa-bukit-makmur-6202162006/slideshow/WhatsApp_Image_2023_03_29_at_11_.58.jpeg"
-                    class="img-responsive"
-                  />
+                  <img src="" class="img-responsive" />
                 </div>
                 <div class="col-md-10 col-sm-9">
                   <table class="table">
