--- a/detail.kep.keu.html
+++ b/detail.kep.keu.html
@@ -275,13 +275,12 @@
                     <th width="15%" nowrap>Nama Pejabat</th>
                     <td width="1px">:</td>
                     <td>
-                      <button
-                        type="button"
-                        href="http://bukitmakmur-kotim.desa.id/pegawai/detail/25952"
+                      <a
+                        href="bio-kep-keu.html"
                         class="btn btn-sm btn-default pull-right btn-light"
                       >
                         Detail Pegawai <i class="fa fa-share"></i>
-                      </button>
+                      </a>
                       I Dewa Nyoman Mantra
                     </td>
                   </tr>
@@ -296,8 +295,8 @@
               </table>
               <blockquote>
                 <p>NAMA : I Dewa Nyoman Mantra</p>
-                <p>TTL :&nbsp;--</p>
-                <p>AGAMA : --</p>
+                <p>TTL :&nbsp;Banjarangkan 3 Juni 1983</p>
+                <p>AGAMA : Hindu</p>
               </blockquote>
             </div>
           </div>
